# rpc-cloudfunc-middleware

./: Cargo.toml  README.md  functions.json  gen-web-client.sh
ai_assistant/: Cargo.toml  build.rs
ai_assistant/cloudfunc_demo/: aliyun_translation.py
ai_assistant/extension/ai-assistant/: index.html  manifest.json  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
ai_assistant/extension/ai-assistant/src/: App.tsx  content.tsx  icons.tsx  selection.ts
ai_assistant/extension/ai-assistant/src/components/: IconPopup.css  IconPopup.tsx  Result.tsx
ai_assistant/extension/ai-assistant/src/rpc/: CloudrpcServiceClientPb.ts  cloudrpc_pb.cjs  cloudrpc_pb.d.ts  index.ts
ai_assistant/proto/: cloudrpc.proto
ai_assistant/src/: ai_assistant.rs  client.rs  server.rs
middleware/: Cargo.toml
middleware/src/: config.rs  lib.rs
middleware/src/func/: mod.rs  spec_func.rs
