[package]
name = "ai_assistant"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
rpc-cloudfunc-middleware = {path = "../middleware"}
tonic = "0.9.2"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tonic-web = "0.9.2"
env_logger = "0.10.0"
log = "0.4.19"

[build-dependencies]
tonic-build = "0.9"

